test/tests/stages/16_characters_and_strings/invalid_types/implicit_conversion_between_char_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(c)
  =
  const int(0)
  ;
  signed
  char
  *
  identifier(s)
  =
  identifier(c)
  ;
  return
  (
  int
  )
  identifier(s)
  ;
  }
